--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,4 +5,6 @@ set(CMAKE_C_STANDARD 11)
 
 add_executable(EndOfTermReview1 topic1.c)
 add_executable(EndOfTermReview2 topic2.c)
+add_executable(EndOfTermReview3 topic3.c)
+add_executable(EndOfTermReview4 topic4.c)
 
