--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,4 +7,5 @@ add_executable(EndOfTermReview1 topic1.c)
 add_executable(EndOfTermReview2 topic2.c)
 add_executable(EndOfTermReview3 topic3.c)
 add_executable(EndOfTermReview4 topic4.c)
+add_executable(EndOfTermReview5 topic5.c)
 
