--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,4 +13,5 @@ add_executable(EndOfTermReview7 topic7.c)
 add_executable(EndOfTermReview8 topic8.c)
 add_executable(EndOfTermReview9-1 topic9-1.c)
 add_executable(EndOfTermReview9-2 topic9-2.c)
+add_executable(EndOfTermReview10 topic10.c)
 
