--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,4 +16,5 @@ add_executable(EndOfTermReview9-2 topic9-2.c)
 add_executable(EndOfTermReview10 topic10.c)
 add_executable(EndOfTermReview11 topic11.c)
 add_executable(EndOfTermReview12 topic12.c)
+add_executable(EndOfTermReview13 topic13.c)
 
