--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,4 +19,9 @@ add_executable(EndOfTermReview12 topic12.c)
 add_executable(EndOfTermReview13 topic13.c)
 add_executable(EndOfTermReview14 topic14.c)
 add_executable(EndOfTermReview15 topic15.c)
+add_executable(EndOfTermReview16 topic16.c)
+add_executable(EndOfTermReview17 topic17.c)
+add_executable(EndOfTermReview18 topic18.c)
+add_executable(EndOfTermReview19 topic19.c)
+add_executable(EndOfTermReview20 topic20.c)
 
