--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,9 @@ project(EndOfTermReview C)
 
 set(CMAKE_C_STANDARD 11)
 
+add_executable(EndOfTermTesting testing.c)
+add_executable(EndOfTermTesting2 testing2.c)
+
 add_executable(EndOfTermReview1 topic1.c)
 add_executable(EndOfTermReview2 topic2.c)
 add_executable(EndOfTermReview3 topic3.c)
